# Robotics

./: .gitignore  Readme.md  pyproject.toml  tester.json
first/module1/: designe.py  first_project.ui  project.py  readme.md
first/module1/neuro_model/: lern.ipynb
first/module1/neuro_model/project-1-at-2026-01-11-09-36-8517fae7/: model.yaml
first/module1/utils/: automatic_module.py  hand_move.py  lamp.py  logger.py  nepovtorimiy_original.py  neuro_util.py
motion/: core.py  system_def.py
motion/robot_control/: __init__.py  motionSL_pb2.py  motionSL_v1_pb2.py  motion_program.py
second/: ReadmeA.md  ReadmeB.md  designe.ui  moduleA.py  moduleB.py  my.md
second/mlearning/: test.json  yolearn.ipynb
second/mlearning/runs/detect/train/: args.yaml
second/mlearning/runs/detect/train10/: args.yaml  results.csv
second/mutils/: automatic.py  designer.py  fake_motion.py  lamp.py  mlogger.py
third/: project-2-at-2026-01-25-12-00-7366ac85.json  test_json.py
